Vertical and horizontal scrollbar fix

--- a/frontend/AppGlobal.css
+++ b/frontend/AppGlobal.css
@@ -5,12 +5,14 @@
   top: 0;
   left: 0;
   z-index: 0;
+  overflow: hidden;
 }
 
 .dashboard-fullscreen {
   height: 100vh;
   width: 100vw;
   position: relative;
+  overflow: hidden;
 }
 
 .videosidebar-empty {
