--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,15 +29,24 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
+  /* place-items: center; 
   display: flex;
   align-items: center;
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+} */
+
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 h1 {
